# EScheduler

./: .dockerignore  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  DEV_NOTE.md  Dockerfile  README.md  TEST.md  docker-compose.yaml  main.py  prometheus.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feat-issue.yml
.github/workflows/: docker-build.yml  regression-test.yml
frontend/: DEVELOPMENT_GUIDE.md  README.md  biome.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/assets/: expression_templates.json
frontend/src/assets/styles/: color-schema.json
frontend/src/models/: email_template.ts  schedule_helper.ts  scheduler.ts  statistic.ts
frontend/src/plugins/: i18n.ts  vuetify.ts
frontend/src/router/: index.ts
frontend/src/services/: api.ts  email_template.ts  schedule_helper.ts  scheduler.ts  statistic.ts
frontend/src/stores/: email_template.ts  schedule_helper.ts  scheduler.ts
frontend/src/templates/: rabbitmq.ts  scheduler.ts  webhook.ts
frontend/src/types/: assets.d.ts
frontend/src/views/: Dashboard.vue  EmailTaskList.vue  EmailTemplateCreate.vue  EmailTemplateEdit.vue  EmailTemplateList.vue  EmailTemplatePreview.vue  NotFound.vue  ScheduleHelper.vue  TaskCreate.vue  TaskEdit.vue  TaskList.vue
src/: initializer.py  main.py
src/configs/: __init__.py  cfg.py  db.py  jwt.py  openapi.py  rabbitmq.py  smtp.py  strategy_config.py
src/consts/: __init__.py
src/dependencies/: repositories.py  services.py  utils.py
src/exceptions/: __init__.py  exceptions.py
src/models/enum/: __init__.py  scheduler.py
src/models/pydantic/: __init__.py  email_template.py  schedule_helper.py  scheduler.py  statistic.py  strategy.py  team.py
src/models/tortoise/: __init__.py  email_template.py  scheduler.py  team.py
src/repositories/: __init__.py  base.py  scheduler.py  team.py
src/routers/: __init__.py  email_template.py  schedule_helper.py  scheduler.py  statistic.py  team.py
src/services/: __init__.py  email_template.py  schedule_helper.py  scheduler.py  scheduler_engine.py  statistic.py  team.py
src/services/execution_strategies/: __init__.py  email_strategy.py  enhanced_email_strategy.py  http_strategy.py  rabbitmq_strategy.py  strategy_factory.py  webhook_strategy.py
src/test/rabbitMQ/: exchange_type.py
src/utils/: jwt.py  logger.py  logger_config.py  schedule.py
src/utils/api/: __init__.py  router.py
tests/: conftest.py  pytest.ini
tests/unit/: test_initializer.py  test_main.py
tests/unit/dependencies/: test_repositories.py  test_services.py
tests/unit/repositories/: test_scheduler.py
tests/unit/routers/: test_email_template.py  test_schedule_helper.py  test_scheduler.py  test_statistic.py
tests/unit/services/: test_email_template.py  test_schedule_helper.py  test_scheduler.py  test_scheduler_engine.py  test_statistic.py
tests/unit/utils/: test_jwt.py  test_schedule.py
(+21 files in other folders)
