[project]
name = "EScheduler"
version = "0.1.0"
description = "FKT EScheduler"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "uvicorn (>=0.34.2,<0.35.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic[email] (>=2.11.4,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "tortoise-orm[psycopg] (>=0.25.0,<0.26.0)",
    "python-jose[cryptography] (>=3.4.0,<4.0.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "typer (>=0.15.1,<0.16.0)",
    "python-json-logger (>=3.3.0,<4.0.0)",
    "python-logging-loki (>=0.3.1,<0.4.0)",
    "prometheus-fastapi-instrumentator (>=7.1.0,<8.0.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "croniter (>=1.4.1,<2.0.0)",
    "httpx (>=0.25.0,<0.26.0)",
    "aiohttp (>=3.12.15,<4.0.0)",
    "aio-pika (>=9.5.7,<10.0.0)",
    "aiosmtplib (>=4.0.1,<5.0.0)",
    "jinja2>=3.1.6",
]
