[project]
name = "EScheduler"
version = "0.1.0"
description = "FKT EScheduler"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "uvicorn (>=0.34.2,<0.35.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic[email] (>=2.11.4,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "tortoise-orm[psycopg] (>=0.25.0,<0.26.0)",
    "python-jose[cryptography] (>=3.4.0,<4.0.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "typer (>=0.15.1,<0.16.0)",
    "python-json-logger (>=3.3.0,<4.0.0)",
    "python-logging-loki (>=0.3.1,<0.4.0)",
    "prometheus-fastapi-instrumentator (>=7.1.0,<8.0.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "croniter (>=1.4.1,<2.0.0)",
    "httpx (>=0.25.0,<0.26.0)",
    "aiohttp (>=3.12.15,<4.0.0)",
    "aio-pika (>=9.5.7,<10.0.0)",
    "aiosmtplib (>=4.0.1,<5.0.0)",
    "jinja2>=3.1.6"
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-dotenv>=0.5.2",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.0",
    "types-croniter>=6.0.0.20250809",
    "types-python-jose>=3.5.0.20250531",
]

[tool.ruff.lint]
select = [
    "F", # Pyflakes
    "N", # PEP8-Naming
    "PLR", # Pylint-Refactor
]

ignore = [
    "F401", # unused import
    "F403", # import *
    "PLR0913", # Too many argument
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "PLR2004", # 允許測試碼使用 magic numbers
    "S101",    # 允許使用 assert
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
# 解決 "By default the bodies of untyped functions are not checked"
check_untyped_defs = true

[[tool.mypy.overrides]]
# 測試資料夾可以放寬檢查
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "apscheduler.*",
    "logging_loki.*",
    "croniter.*",
    "jose.*"
]
ignore_missing_imports = true
